--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "private": false,
   "scripts": {
     "start": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "migration:run": "ts-node-dev ./node_modules/typeorm/cli.js migration:run",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "build": "tsc src/server.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite3": "^4.2.0",
+    "typeorm": "^0.2.30"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
