--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": false,
   "scripts": {
     "start": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "migration:revert": "ts-node-dev ./node_modules/typeorm/cli.js migration:revert",
     "migration:run": "ts-node-dev ./node_modules/typeorm/cli.js migration:run",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "build": "tsc src/server.ts"
