--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
     "sqlite3": "^4.2.0",
-    "typeorm": "^0.2.30"
+    "typeorm": "^0.2.30",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
+    "@types/yup": "^0.29.11",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
