--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tsc src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
@@ -21,6 +22,7 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
     "@types/yup": "^0.29.11",
